update api post

--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -27,7 +27,8 @@
     </div>
   </div>
   <div id="post" *ngFor="let postdata of allpost">
-    <app-postfeed [post]="postdata" ></app-postfeed>
+    <app-postfeed [post]="postdata" (postChange)="deletePost($event)"></app-postfeed>
+    <!-- <app-postfeed [(post)]="postdata" ></app-postfeed> -->
   </div>
   </div>
 </div>
