--- a/src/app/components/postfeed/postfeed.component.html
+++ b/src/app/components/postfeed/postfeed.component.html
@@ -1,13 +1,25 @@
 <div id="postfeed">
 <div id="allContent">
-    <div id="postLike">
-        <div id="logoVote">
-            <i class="fas fa-arrow-up"></i>
-        </div>
-        <div id="countVote">
-            {{post.likeCount}}
+    <div *ngIf="post.isLiked; else elseBlock">
+        <div id="postLike">
+            <div id="logoVoteEna" (click)="unlikePost()">
+                <i class="fas fa-arrow-up"></i>
+            </div>
+            <div id="countVoteEna">
+                {{post.likeCount}}
+            </div>
         </div>
     </div>
+    <ng-template #elseBlock>
+        <div id="postLike">
+            <div id="logoVoteDis" (click)="likePost()">
+                <i class="fas fa-arrow-up"></i>
+            </div>
+            <div id="countVoteDis">
+                {{post.likeCount}}
+            </div>
+        </div>
+    </ng-template>
     <div id="postfeedContent">
         <div id="header">
             <div id="headerLeft">
@@ -26,11 +38,11 @@
                         <i class="fas fa-ellipsis-h"></i>
                     </button>
                     <mat-menu #menu="matMenu" xPosition="after">
-                    <button mat-menu-item>
+                    <button mat-menu-item >
                         <mat-icon>create</mat-icon>
                         <span>Edit post</span>
                     </button>
-                    <button mat-menu-item>
+                    <button mat-menu-item (click)="Deletepost()">
                         <mat-icon>delete_outline</mat-icon>
                         <span>Delete post</span>
                     </button>
