--- a/src/app/components/postfeed/postfeed.component.scss
+++ b/src/app/components/postfeed/postfeed.component.scss
@@ -14,7 +14,7 @@
             flex-flow: column;
             align-items: center;
             color: gray;
-            #logoVote {
+            #logoVoteDis{
                 z-index: 3;
                 font-size: 25px;
                 padding: 3px;
@@ -25,7 +25,23 @@
                     cursor: pointer;
                 }
             }
-            #countVote {
+            #logoVoteEna{
+                z-index: 3;
+                font-size: 25px;
+                padding: 3px;
+                border-radius: 5px;
+                transition: 0.3s;
+                color: rgba(0, 194, 228, 0.486);
+                &:hover {
+                    background-color: rgba(9, 218, 255, 0.308);
+                    cursor: pointer;
+                }
+            }
+            #countVoteDis {
+                color: gray;
+            }
+            #countVoteEna {
+                color: rgba(0, 194, 228, 0.486);
             }
         }
         #postfeedContent {
@@ -64,7 +80,6 @@
                         #postbyTxt {
                             padding: 0px 3px;
                         }
-                        #postbyUser {}
                     }
                 }
                 #headerRight {
