--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -12,94 +12,36 @@
                         <textarea matInput placeholder="What are you comment ?"></textarea>
                       </mat-form-field>
                 </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
+                <div id="comment-user">
+                    <div id="content-comment">
+                        <div id="image">
+                            <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
+                        </div>
+                        <div id="postBy">
+                            <div id="headerLeft">
+                                <div id="colum">
+                                    <div id="userName">FlukeNtk</div>
+                                    <div id="postTime">3h</div>
+                                </div>
+                                <div class="content-text">
+                                    <div id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</div>
+                                </div>
+                            </div>
+                            <div class="change-comment">
+                                <button mat-icon-button [matMenuTriggerFor]="menu" class="edit-comment">
+                                    <i class="fa fa-ellipsis-h" style="font-size:12px;"></i>
+                                </button>
+                                <mat-menu #menu="matMenu" xPosition="after">
+                                <button mat-menu-item>
+                                    <span>Edit Comment</span>
+                                </button>
+                                <button mat-menu-item>
+                                    <span>Delete Comment</span>
+                                </button>
+                                </mat-menu>
+                            </div>
+                        </div>
                     </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
-                <div class="comment-user">
-                    <div class="content-comment">
-                        <img id="imgGroup" src="https://post.medicalnewstoday.com/wp-content/uploads/sites/3/2020/02/322868_1100-800x825.jpg" alt="">
-                        <label id="userName">FlukeNtk</label>
-                        <label id="postTime">3h</label>
-                    </div>
-                    <div class="content-text"><label id="text">ผมชื่อบังสุดหล่อพ่อรวยมีเงินหมื่นล้าน</label></div>
-                </div>
             </div>
         </div>
     </div>
