--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -1,18 +1,23 @@
 <div class="ranking">
     <div class="pic">
+       <div class="name-ranking">
+           Most Popular Group
+       </div>
         <img id="photo"
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBsEaaWu8_GSI4QPkSVAxh25FYc6YFfVHPmUggtDAYPDV42XvkM95dmzHriXb23FT0zg&usqp=CAU">
     </div>
-    <div class="userFlex1">
-        <div class="item1">
-            <div class="content1">
-                <h3>1. </h3>
-                <div class="userPicFlex">
-                    <img id="picUser"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Video-Game-Controller-Icon-IDV-green.svg/2048px-Video-Game-Controller-Icon-IDV-green.svg.png">
-                </div>
-                <div class="userName">
-                    <p> Viriya Jumpartue</p>
+    <div *ngFor="let group of allGroups; let i = index">
+        <div class="userFlex1">
+            <div class="item1">
+                <div class="content1">
+                    <h3>{{i+1}}. </h3>
+                    <div class="userPicFlex">
+                        <img id="picUser"
+                            src= {{group.group_profile}}>
+                    </div>
+                    <div class="userName">
+                        <p>{{group.name}} </p>
+                    </div>
                 </div>
             </div>
         </div>
