--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,14 @@
 * {
+  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100&family=Open+Sans:wght@300&family=Ubuntu:wght@300&display=swap');
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   // font-family: 'Prompt', sans-serif;
-  font-family: 'Kanit', sans-serif;
+  //font-family: 'Kanit', sans-serif;
   // font-family: 'Ubuntu', sans-serif;
   //font-family: 'Open Sans', sans-serif;
+  font-family: 'IBM Plex Sans Thai', sans-serif;
   ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
@@ -21,4 +23,4 @@
   }
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'IBM Plex Sans Thai', sans-serif; }
