--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -4,7 +4,7 @@
            Most Popular Group
        </div>
         <img id="photo"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBsEaaWu8_GSI4QPkSVAxh25FYc6YFfVHPmUggtDAYPDV42XvkM95dmzHriXb23FT0zg&usqp=CAU">
+            src={{allGroups[0].group_banner}}>
     </div>
     <div *ngFor="let group of allGroups; let i = index">
         <div class="userFlex1">
