--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -10,7 +10,7 @@
         </div>   
         <div id="filterTab">
           <div id="filterLeft">
-            <div id="popularButton"> <i class="fas fa-fire-alt logoFire"></i>Popular</div>
+            <div id="popularButton"> <i class="fas fa-fire-alt logoFire"></i>All Group</div>
             <div id="lastestButton"><i class="far fa-sun logoNew"></i>Newest</div>
           </div>
           <div id="filterRight">
@@ -32,8 +32,10 @@
       </div>
     <div id="post" *ngFor="let postdata of allpost">
       <app-postfeed [post]="postdata" (postChange)="deletePost($event)"></app-postfeed>
-      <!-- <app-postfeed [(post)]="postdata" ></app-postfeed> -->
     </div>
+  </div>
+  <div id="ranking">
+    <app-ranking></app-ranking>
   </div>
 </div>
 </ng-template>
