--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -1,9 +1,9 @@
 $colorTxt: rgb(51, 51, 51);
 @media (min-width: 900px) {
     #feedContent {
-        margin-top: 50px;
+        margin-top: 40px;
         display: grid;
-        padding: 20px;
+        padding: 0 20px 20px 20px;
         grid-template-columns: 1fr 2fr 1fr 1fr;
         #content {
             grid-column-start: 2;
@@ -35,9 +35,9 @@ $colorTxt: rgb(51, 51, 51);
                             background-color: #99d4d36b;
                             margin-right: 40px;
                             height: 60%;
-                            padding: 0px 10px;
+                            padding: 5px 10px;
                             transition: 0.3s;
-                            .logoFire {
+                            .logoNew {
                                 margin-right: 5px
                             }
                             &:hover {
@@ -52,9 +52,9 @@ $colorTxt: rgb(51, 51, 51);
                             color: #1B4E8C;
                             margin-right: 40px;
                             height: 60%;
-                            padding: 0px 10px;
+                            padding: 5px 10px;
                             transition: 0.3s;
-                            .logoNew {
+                            .logoFire {
                                 margin-right: 5px
                             }
                             &:hover {
@@ -78,12 +78,16 @@ $colorTxt: rgb(51, 51, 51);
                 width: 100%;
             }
         }
+        #ranking {
+            padding: 35px 0 0 20px;
+        }
     }
 }
 @media (max-width: 1100px) {
     #feedContent {
+        margin-top: 40px;
         display: grid;
-        padding: 20px;
+        padding: 0 20px 20px 20px;
         grid-template-columns: 1fr 8fr 1fr;
         #content {
             grid-column-start: 2;
@@ -115,9 +119,9 @@ $colorTxt: rgb(51, 51, 51);
                             background-color: #99d4d36b;
                             margin-right: 40px;
                             height: 60%;
-                            padding: 0px 10px;
+                            padding: 5px 10px;
                             transition: 0.3s;
-                            .logoFire {
+                            .logoNew {
                                 margin-right: 5px
                             }
                             &:hover {
@@ -132,9 +136,9 @@ $colorTxt: rgb(51, 51, 51);
                             color: #1B4E8C;
                             margin-right: 40px;
                             height: 60%;
-                            padding: 0px 10px;
+                            padding: 5px 10px;
                             transition: 0.3s;
-                            .logoNew {
+                            .logoFire {
                                 margin-right: 5px
                             }
                             &:hover {
@@ -157,6 +161,9 @@ $colorTxt: rgb(51, 51, 51);
             #post {
                 width: 100%;
             }
+        }
+        #ranking {
+            display: none;
         }
     }
 }
