--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -6,10 +6,11 @@
   overflow-y: overlay;
   #navBox {
     height: $navHeight;
-    position: sticky;
     top :0;
   }
   #bodyBox {
+    position: relative;
     height: calc(100vh - (#{$navHeight}));
+    overflow-y: auto;
   }
 }
