updated group component

--- a/src/app/components/group/group.component.html
+++ b/src/app/components/group/group.component.html
@@ -7,15 +7,16 @@
       </div>
       <div id="groupName">Doggy Lover</div>
       <div id="groupButton">
-        <button pButton type="button" label="Primary">Join</button>
+        <button mat-button type="button" label="Primary" id="joinButton">Join</button>
       </div>
     </div>
   </div>
   <div id="groupFeed">
-    <app-postfeed></app-postfeed>
-    <app-postfeed></app-postfeed>
-    <app-postfeed></app-postfeed>
-    <app-postfeed></app-postfeed>
-    <app-postfeed></app-postfeed>
+    <div class="post">
+      <app-postfeed></app-postfeed>
+    </div>
+    <div class="post">
+      <app-postfeed></app-postfeed>
+    </div>
   </div>
 </div>
