--- a/src/app/components/postfeed/postfeed.component.scss
+++ b/src/app/components/postfeed/postfeed.component.scss
@@ -8,7 +8,7 @@
         display: grid;
         grid-template-columns: 50px 1fr;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        #postLike {
+        .postLike {
             padding-top: 20px;
             display: flex;
             flex-flow: column;
