--- a/src/app/components/group/group.component.html
+++ b/src/app/components/group/group.component.html
@@ -1,6 +1,6 @@
 <div id="mainGroup">
   <div id="groupInfo">
-    <img id="groupBanner" alt="" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.osUlWBPZNDCJMplq44lf0wHaEK%26pid%3DApi&f=1">
+    <img id="groupBanner" alt="" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.fbcoverlover.com%2Fmaker%2Fcovers-images%2Fdownload%2FAuntumn-in-Paris-Facebook-Covers-FBcoverlover_facebook_cover.jpg&f=1&nofb=1">
     <div id="groupDescription">
       <div id="groupProfilePic">
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs.yimg.com%2Fny%2Fapi%2Fres%2F1.2%2FmeltodKpRfAGJPiLZ9m.7g--%2FYXBwaWQ9aGlnaGxhbmRlcjt3PTIwMDA7aD0xNTEx%2Fhttps%3A%2F%2Fs.yimg.com%2Fuu%2Fapi%2Fres%2F1.2%2F.k2FyPaWgueCnGDy_bp67Q--~B%2FaD0zMzUyO3c9NDQzODthcHBpZD15dGFjaHlvbg--%2Fhttp%3A%2F%2Fmedia.zenfs.com%2Fen%2Fhomerun%2Ffeed_manager_auto_publish_494%2F4df94654a42b9b4c6d5bf41ac9e32ba2&f=1&nofb=1" alt="" id="pic">
@@ -12,9 +12,6 @@
     </div>
   </div>
   <div id="groupFeed">
-    <div class="post">
-      <app-postfeed></app-postfeed>
-    </div>
     <div class="post">
       <app-postfeed></app-postfeed>
     </div>
