--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -3,6 +3,7 @@
   min-height: 100vh
   display: flex
   flex-direction: column
+  background-color: #C9FFE5DA
   #groupInfo
     display: flex
     flex-flow: column
@@ -11,36 +12,39 @@
     #groupBanner
       position: relative
       width: 100%
-      height: 60%
+      height: 70%
+      object-fit: cover
     #groupDescription
       display: flex
       position: relative
       justify-content: center
       width: 100%
-      height: 40%
-      background-color: green
+      height: 30%
+      background-color: #fff
+      box-shadow: 1px 1px #0000003F
       #groupProfilePic
         width: 100px
         #pic
+          border-style: solid
+          border-color: #fff
           transform: translateY(-30px)
           border-radius: 50px
           width: 100px
           height: 100px
           position: absolute
       #groupName
-        margin-left: 20px
-        margin-right: 20px
-        margin-top: 15px
+        margin: 2px 20px 0
         font-weight: bold
         font-size: 2rem
+        line-height: normal
       #groupButton
         margin-top: 10px
         #joinButton
           color: white
-          background-color: #2775D2
+          background-color: #44d7a8
   #groupFeed
     display: flex
     flex-flow: column
     align-items: center
     .post
-      min-width: 500px
+      min-width: 700px
