--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -27,7 +27,41 @@ $colorTxt: rgb(51, 51, 51);
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     #filterLeft {
                         display: flex;
-                        #lastestButton {
+                        #lastestButtonDis {
+                            display: flex;
+                            align-items: center;
+                            border-radius: 20px;
+                            color: #1B4E8C;
+                            margin-right: 40px;
+                            height: 60%;
+                            padding: 5px 10px;
+                            transition: 0.3s;
+                            .logoNew {
+                                margin-right: 5px
+                            }
+                            &:hover {
+                                background-color: #99d4d36b;
+                                cursor: pointer;
+                            }
+                        }
+                        #popularButtonDis {
+                            display: flex;
+                            align-items: center;
+                            border-radius: 20px;
+                            color: #1B4E8C;
+                            margin-right: 40px;
+                            height: 60%;
+                            padding: 5px 10px;
+                            transition: 0.3s;
+                            .logoFire {
+                                margin-right: 5px
+                            }
+                            &:hover {
+                                background-color: #99d4d36b;
+                                cursor: pointer;
+                            }
+                        }
+                        #lastestButtonEna {
                             display: flex;
                             align-items: center;
                             border-radius: 20px;
@@ -45,11 +79,12 @@ $colorTxt: rgb(51, 51, 51);
                                 cursor: pointer;
                             }
                         }
-                        #popularButton {
+                        #popularButtonEna {
                             display: flex;
                             align-items: center;
                             border-radius: 20px;
                             color: #1B4E8C;
+                            background-color: #99d4d36b;
                             margin-right: 40px;
                             height: 60%;
                             padding: 5px 10px;
@@ -76,6 +111,26 @@ $colorTxt: rgb(51, 51, 51);
             }
             #post {
                 width: 100%;
+            }
+            #postEmpty {
+                width: 100%;
+                height: calc(100vh - 250px);
+                background-color: #ffffff;
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                    #imgEmpty {
+                    }
+                    #emptyTxt {
+                        padding-top: 20px;
+                        font-weight: bold;
+                        width: 60%;
+                        text-align: center;
+                        grid-column-start: 2;
+                        grid-row-start: 2;
+                    }
             }
         }
         #ranking {
@@ -160,6 +215,26 @@ $colorTxt: rgb(51, 51, 51);
             }
             #post {
                 width: 100%;
+            }
+            #postEmpty {
+                width: 100%;
+                height: calc(100vh - 250px);
+                background-color: #ffffff;
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                    #imgEmpty {
+                    }
+                    #emptyTxt {
+                        padding-top: 20px;
+                        font-weight: bold;
+                        width: 60%;
+                        text-align: center;
+                        grid-column-start: 2;
+                        grid-row-start: 2;
+                    }
             }
         }
         #ranking {
