--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -18,7 +18,7 @@
               <i class="fas fa-ellipsis-h"></i>
             </button>
             <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item>
+              <button mat-menu-item (click)="onCreatePost()">
                 <mat-icon>create</mat-icon>
                 <span>Create post</span>
               </button>
