--- a/src/app/components/createpost/createpost.component.scss
+++ b/src/app/components/createpost/createpost.component.scss
@@ -1,62 +1,84 @@
 #cratePost {
+  width: 100%;
   display: flex;
   flex-flow: column wrap;
-  // justify-content: center;
   align-items: center;
   padding: 20px 0 0 0;
-  #title {
-    font-size: 1.3rem;
-    font-weight: 700;
-  }
-  .line {
-    border-bottom: 1px solid black;
-    width: 35%;
-  }
-  #selectCommunity {
-    width: 35%;
-    margin: 20px 0 10px 0;
-  }
   #postBox {
+    max-width: 700px;
     width: 100%;
     display: flex;
-    justify-content: center;
-    #postinBox {
+    align-items: center;
+    flex-flow: column wrap;
+    #title {
+      width: 100%;
+      font-size: 1.3rem;
+      font-weight: 700;
+      padding-top: 10px;
+      .title-box {
+        width: 100%;
+        text-align: center;
+      }
+    }
+    .line {
+      border-bottom: 1px solid black;
       max-width: 650px;
       width: 100%;
-      background-color: #fff;
-      box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
-      -webkit-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
-      -moz-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
-      border-radius: 5px;
-      padding: 20px 0 20px 0;
-      #postTitle {
-        display: flex;
-        justify-content: center;
-        .input-box {
-          width: 90%;
-          border-radius: 4px;
-          border: 1px solid #c4c4c4;
-          height: 40px;
-          padding-left: 20px;
-        }
-      }
-      #areaText {
-        margin: 20px 0 0 30px;
+      padding: 5px;
+    }
+    #selectCommunity {
+      width: 100%;
+      padding: 20px 0 10px 25px;
+    }
+    #postBox {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      #postinBox {
+        max-width: 650px;
         width: 100%;
-        .text-area {
-          border: 1px solid #c4c4c4;
-          &::placeholder {
-            margin: 5px 0 0 10px;
+        background-color: #fff;
+        box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
+        -webkit-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
+        -moz-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
+        border-radius: 5px;
+        padding: 20px 20px 20px 20px;
+        #areaText {
+          display: flex;
+          justify-content: center;
+          margin-top: 20px;
+          width: 100%;
+          height: 200px;
+          .text-area {
+            width: 90%;
+            border: 1px solid #c4c4c4;
+            font-size: 1.2rem;
+            padding: 20px;
+          }
+        }
+        #buttonBox {
+          display: flex;
+          justify-content: flex-end;
+          padding-right: 35px;
+          padding-top: 20px;
+          .post-button {
+            border-radius: 10px;
+            border: none;
+            width: 100px;
+            height: 30px;
+            background-color: gray;
           }
         }
       }
-      #buttonBox {
-        .false-button {
-          background-color: #ec1313;
-        }
-        .true-button {
-          background-color: aqua;
-        }
+    }
+  }
+}
+
+@media screen and (max-width: 654px) {
+  #cratePost {
+    #postBox {
+      #selectCommunity {
+        padding: 20px 0 10px 0;
       }
     }
   }
