map api function

--- a/src/app/components/group/group.component.html
+++ b/src/app/components/group/group.component.html
@@ -13,7 +13,8 @@
         </div>
       </div>
       <div id="groupButton" (click)="joinOrLeaveGroup()">
-        <button [ngClass]="isMember == true ? 'joinButton' : 'leaveButton'">{{isMember}}</button>
+<!--        <button [ngClass]="isMember == true ? 'joinButton' : 'leaveButton'">{{isMember}}</button>-->
+        <button class="{{!isMember ? 'joinButton' : 'leaveButton'}}">{{isMember? 'Joined' : 'Join'}}</button>
       </div>
     </div>
   </div>
