--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -48,17 +48,19 @@
             margin-left: 2px
             font-size: 0.5rem
       #groupButton
-        margin-top: 10px
+        margin-top: 14px
         .joinButton
+          font-weight: bold
           height: 30px
-          width: 50px
+          width: 60px
           border-radius: 5px
           border: none
           color: white
           background-color: #2097B2FF
         .leaveButton
+          font-weight: bold
           height: 30px
-          width: 50px
+          width: 60px
           border-radius: 5px
           border: none
           color: white
