--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -65,7 +65,7 @@
           border: none
           color: white
           background-color: #44d7a8
-  #groupFeed
+  .groupFeed
     display: flex
     flex-flow: column
     align-items: center
