--- a/src/app/components/createpost/createpost.component.scss
+++ b/src/app/components/createpost/createpost.component.scss
@@ -1,20 +1,38 @@
 #cratePost {
+  position: absolute;
+  top: 0;
+  z-index: 9999;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
   width: 100%;
+  height: 100vh;
   display: flex;
-  flex-flow: column wrap;
+  justify-content: center;
   align-items: center;
-  padding: 20px 0 0 0;
-  #postBox {
-    max-width: 700px;
-    width: 100%;
+  #postInBox {
+    width: min(500px , 100%);
     display: flex;
     align-items: center;
     flex-flow: column wrap;
+    background-color: #fff;
+    box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
+    -webkit-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
+    -moz-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
+    border-radius: 5px;
+    #closeModal {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      padding: 10px;
+      cursor: pointer;
+      .x-text {
+        font-size: 1.5rem
+      }
+    }
     #title {
       width: 100%;
       font-size: 1.3rem;
       font-weight: 700;
-      padding-top: 10px;
       .title-box {
         width: 100%;
         text-align: center;
@@ -22,35 +40,28 @@
     }
     .line {
       border-bottom: 1px solid black;
-      max-width: 650px;
-      width: 100%;
+      width: min(450px , 100%);
       padding: 5px;
     }
     #selectCommunity {
       width: 100%;
-      padding: 20px 0 10px 25px;
+      padding: 20px 0 0 25px;
     }
     #postBox {
       width: 100%;
       display: flex;
       justify-content: center;
       #postinBox {
-        max-width: 650px;
         width: 100%;
-        background-color: #fff;
-        box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
-        -webkit-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
-        -moz-box-shadow: 4px 8px 18px -2px rgba(11,10,10,0.48);
-        border-radius: 5px;
-        padding: 20px 20px 20px 20px;
         #areaText {
           display: flex;
           justify-content: center;
           margin-top: 20px;
-          width: 100%;
+          margin-left: 25px;
+          width: 90%;
           height: 200px;
           .text-area {
-            width: 90%;
+            width: 100%;
             border: 1px solid #c4c4c4;
             font-size: 1.2rem;
             padding: 20px;
@@ -59,14 +70,16 @@
         #buttonBox {
           display: flex;
           justify-content: flex-end;
-          padding-right: 35px;
-          padding-top: 20px;
+          padding: 20px 20px 20px 0;
           .post-button {
             border-radius: 10px;
             border: none;
             width: 100px;
             height: 30px;
             background-color: gray;
+            &:disabled {
+              background-color: rgb(180, 178, 178);
+            }
           }
         }
       }
