--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -415,3 +415,13 @@ $colorTxt: rgb(51, 51, 51);
     height: calc(100vh - 50px);
     z-index: 9999;
 }
+.miniLoading {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    background-color: #ffffffc4;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 50px);
+    z-index: 9999999;
+}
