--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -135,6 +135,7 @@ $colorTxt: rgb(51, 51, 51);
             #allGroupShow {
                 margin: 10px 0px;
                 .groupCard {
+                    position: relative;
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     background-color: #fff;
                     border-radius: 5px;
@@ -154,11 +155,17 @@ $colorTxt: rgb(51, 51, 51);
                                 border-radius: 50%;
                                 background-color: #c4c4c4;
                             }
+                            &:hover {
+                                cursor: pointer;
+                            }
                         }
                         .groupContent {
                             margin-left: 10px;
                             .groupName {
                                 font-weight: bold;
+                                &:hover {
+                                    cursor: pointer;
+                                }
                             }
                             .groupDescription {}
                         }
@@ -181,6 +188,7 @@ $colorTxt: rgb(51, 51, 51);
                             }
                         }
                         .joinButtonDis {
+                            z-index: 10;
                             border-radius: 5px;
                             color: white;
                             background-color: rgb(255, 75, 75);
