prakrob nha post and group on feed

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <div id="navbar">
   <div id="content">
     <div id="leftNav">
-      <img id="logoUdome" src="../../../assets/img/logo_s.png" alt="">
-      <div id="logoTxt">
+      <img id="logoUdome" src="../../../assets/img/logo_s.png" alt="" (click)="notBackToHome()">
+      <div id="logoTxt" (click)="notBackToHome()">
         レードーメ
       </div> 
     </div>
