--- a/src/app/components/postfeed/postfeed.component.html
+++ b/src/app/components/postfeed/postfeed.component.html
@@ -69,5 +69,5 @@
         </div> -->
     </div>
 </div>
-    <div id="dummyOpen"></div>
+    <div id="dummyOpen" (click)="goToPost(post.id)" ></div>
 </div>
