--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -14,6 +14,9 @@ $fontColor: white;
         align-items: center;
         #logoUdome{
           width: 50px;
+          &:hover {
+            cursor: pointer;
+          }
         }
         #logoTxt {
           color: $fontColor;
@@ -146,6 +149,21 @@ $fontColor: white;
           &:hover {
             cursor: pointer;
             background-color: #c2dad9;
+          }
+        }
+        .LogoutButton {
+          display: flex;
+          align-items: center;
+          color:rgb(255, 255, 255);
+          font-size: 15px;
+          margin-right: 20px;
+          border-radius: 5px;
+          transition: 0.3s;
+          padding: 3px 13px;
+          background-color: rgb(255, 101, 101);
+          &:hover {
+            cursor: pointer;
+            background-color: rgb(231, 103, 103);
           }
         }
         .userDetail {
