--- a/src/app/components/postfeed/postfeed.component.html
+++ b/src/app/components/postfeed/postfeed.component.html
@@ -38,10 +38,10 @@
                         <i class="fas fa-ellipsis-h"></i>
                     </button>
                     <mat-menu #menu="matMenu" xPosition="after">
-                    <button mat-menu-item >
+                    <!-- <button mat-menu-item >
                         <mat-icon>create</mat-icon>
                         <span>Edit post</span>
-                    </button>
+                    </button> -->
                     <button mat-menu-item (click)="Deletepost()">
                         <mat-icon>delete_outline</mat-icon>
                         <span>Delete post</span>
