add doughnut chart and add loading to group page

--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -206,6 +206,9 @@ $colorTxt: rgb(51, 51, 51);
             }
         }
         #ranking {
+            position: fixed;
+            top: 10%;
+            left: 60%;
             padding: 35px 0 0 20px;
         }
     }
