--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -71,3 +71,22 @@
     align-items: center
     .post
       width: min(700px, 80%)
+
+#loading 
+  position: absolute
+  width: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+  height: calc(100vh - 50px)
+  z-index: 9999999
+  
+#miniloading 
+    position: absolute
+    width: 100%
+    display: flex
+    background-color: #ffffffc4
+    justify-content: center
+    align-items: center
+    height: calc(100vh - 50px)
+    z-index: 9999999
