--- a/src/app/components/group/group.component.html
+++ b/src/app/components/group/group.component.html
@@ -1,3 +1,10 @@
+<div id="loading" *ngIf = "loading; else notLoading">
+  <p-progressSpinner></p-progressSpinner>
+</div>
+<ng-template #notLoading>
+  <div id="miniloading" *ngIf = "miniloading">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
 <div id="mainGroup">
   <div id="groupInfo">
     <img id="groupBanner" alt="" src={{group.group_banner}}>
@@ -25,3 +32,4 @@
   </div>
   <ng-template class="groupFeed"></ng-template>
 </div>
+</ng-template>
