update scss postpage

--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -133,6 +133,8 @@
           .content-text {
             margin-left: 10px;
             margin-top: 5px;
+            width: 600px;
+            word-wrap: break-word;
             #text {
               font-size: 14px;
             }
