--- a/src/app/components/ranking/ranking.component.scss
+++ b/src/app/components/ranking/ranking.component.scss
@@ -46,12 +46,14 @@
         #picUser {
             width: 30px;
             height: 30px;
+            &:hover {cursor: pointer;}
         }
     }
     .userName {
         padding-left: 35px;
         padding-top: 5px;
         padding-right: 10px;
+        &:hover {cursor: pointer;}
     }
    
 }
